--- a/index.html
+++ b/index.html
@@ -2,19 +2,53 @@
 <html lang="en">
 <head>
     <title>Opdrachten HTML </title>
-    <link rel="stylesheet" type="text/css" href="H4/OpmaakSite.css">
+    <link rel="stylesheet" type="text/css" href="CSS/OpmaakSite.css">
 
 </head>
 <body>
-<details>
-    <summary> Klik hier voor de hoofdstukken</summary>
+
+
+    <h1 class="glitch-effect" > HTML Opdrachten</h1>
+    <details>
+        <summary> Klik hier voor de hoofdstukken</summary>
         <p>
-            <a href="H1">Hoofdstuk 1</a> <br>
-            <a href="H2">Hoofdstuk 2</a> <br>
-            <a href="H3">Hoofdstuk 3</a> <br>
-            <a href="H4">hoofdstuk 4</a> <br>
+            <a href="H1/index.html">Hoofdstuk 1</a> <br>
+            <a href="H2/BellenBlazen.html">Hoofdstuk 2</a> <br>
+            <a href="H3/Tabellen.html">Hoofdstuk 3</a> <br>
+            <a href="H4/Vanaf%20Schets.html">hoofdstuk 4</a> <br>
+            <a href="H5/Burton.html">Hoofdstuk 5</a><br>
+            <a href="H6/Formulier.html">Hoofdstuk 6</a>
         </p>
     </details>
+
+    <div class="board">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
+
 </body>
 </html>
 
