--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="H4/Vanaf%20Schets.html">hoofdstuk 4</a> <br>
             <a href="H5/Burton.html">Hoofdstuk 5</a><br>
             <a href="H6/Formulier.html">Hoofdstuk 6</a>
+            <a href="H7/True%20musix.html">Hoofdstuk 7</a>
         </p>
     </details>
 
