--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href="H3/Tabellen.html">Hoofdstuk 3</a> <br>
             <a href="H4/Vanaf%20Schets.html">hoofdstuk 4</a> <br>
             <a href="H5/Burton.html">Hoofdstuk 5</a><br>
-            <a href="H6/Formulier.html">Hoofdstuk 6</a>
-            <a href="H7/True%20musix.html">Hoofdstuk 7</a>
+            <a href="H6/Formulier.html">Hoofdstuk 6</a><br>
+            <a href="H7/True%20Music.html">Hoofdstuk 7</a>
         </p>
     </details>
 
