--- a/H2/BellenBlazen.html
+++ b/H2/BellenBlazen.html
@@ -3,6 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Opdracht Ballie</title>
+    <style>
+        details {
+            width: 200px;
+            border-radius: 8px;
+        }
+        details p{
+            padding: 10px 20px;
+            front-slize: 14px;
+            line-height: 24px;
+            color: red;
+        }
+        details[open] { background: aqua
+        }
+        summary {
+            padding: 10px;
+            background-color: springgreen;
+            color: #ffffff;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+        }
+    </style>
 </head>
 <body>
 
