--- a/H3/Tabellen.html
+++ b/H3/Tabellen.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Made by Jona </h1>
-<table border="1">
+<table border="2" bgcolor="black">
     <tr bgcolor="#00ffff">
         <td rowspan="2"></td>
         <td colspan="2">average</td>
@@ -28,7 +28,9 @@
         <td>xxxx</td>
     </tr>
 </table>
-<p><b><a href="Tabellen2.html" target="_blank">Opdracht 2</a></b></p>
+<p><b><a href="Tabellen2.html" target="_blank">Tabel 2</a></b></p>
+<p><b><a href="Tabellen5.html" target="_blank">Tabel 5</a> </b></p>
+<p><b><a href="Tabellen12.html" target="_blank">Tabel 12</a> </b></p>
 
 </body>
 </html>
