--- a/H6/Formulier.html
+++ b/H6/Formulier.html
@@ -65,7 +65,7 @@
     </div>
 
     <footer>
-        <a href="http://localhost:63342/HTML2019/index.html?_ijt=l0j94ar29va299uq0907k3vchj">Home</a>
+        <a href="https://mystogan-index.netlify.com/">Home</a>
     </footer>
 </form>
 </body>
