--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <details>
         <summary> Klik hier voor de hoofdstukken</summary>
         <p>
-            <a href="H1/index.html">Hoofdstuk 1</a> <br>
+            <a href="H1/Hello.html">Hoofdstuk 1</a> <br>
             <a href="H2/BellenBlazen.html">Hoofdstuk 2</a> <br>
             <a href="H3/Tabellen.html">Hoofdstuk 3</a> <br>
             <a href="H4/Vanaf%20Schets.html">hoofdstuk 4</a> <br>
